<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/showPrivacy"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_privacity"
        android:title="@string/politica_de_privacidade"
        />
    <item
        android:id="@+id/showAbout"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_about"
        android:title="@string/sobre_a_tsb"
        />
    <item
        android:id="@+id/showHelp"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_phone"
        android:title="@string/central_de_ajuda"
        />
    <item
        android:id="@+id/showLogout"
        android:checkable="false"
        android:checked="false"
        android:icon="@drawable/ic_logout"
        android:title="@string/exit"
        />
</menu>