<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/aboutDialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/primaryColor"
    android:padding="20dp">

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textAllCaps="true"
        android:text="@string/politica_de"/>
    <TextView
        android:id="@+id/aboutSubtitle"
        android:layout_below="@+id/aboutTitle"
        android:layout_width="match_parent"
        android:fontFamily="@font/montserrat"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:text="@string/privacidade"/>
    <View
        android:id="@+id/topCard"
        android:layout_below="@id/aboutSubtitle"
        android:layout_width="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_height="2dp"
        android:background="@color/white"/>
    <TextView
        android:id="@+id/content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/topCard"
        android:layout_width="match_parent"
        android:fontFamily="@font/montserrat"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:text="@string/content_privacy"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/closeDialog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/montserrat"
        android:letterSpacing="0"
        android:textStyle="bold"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="15dp"
        app:strokeColor="@android:color/transparent"
        app:strokeWidth="1dp" />

</RelativeLayout>